--- a/style/style.css
+++ b/style/style.css
@@ -38,6 +38,11 @@ p {
     margin: 0px;
 }
 
+.block__two-item {
+    max-width: 272px;
+    width: 100%;
+}
+
 
 /* Burger start*/
 
@@ -272,10 +277,8 @@ p {
 
 .two__item-title {
     text-align: center;
-    max-width: 368px;
-    width: 100%;
-    font-size: 36px;
-    line-height: 42px;
+    font-size: 21px;
+    line-height: 30px;
     color: #fff;
     font-family: var(--RM);
     margin: 35px 0;
